--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@nodemodules/create-boilerplate",
-  "version": "0.0.1",
-  "description": "boilerplate for [common-boilerplate](https://github.com/node-modules/common-boilerplate), use `npm init @nodemodules/boilerplate`",
-  "repository": "git@github.com:node-modules/boilerplate-boilerplate.git",
-  "homepage": "https://github.com/node-modules/boilerplate-boilerplate",
+  "name": "create-common-boilerplate",
+  "version": "0.3.0",
+  "description": "boilerplate for [common-boilerplate](https://github.com/node-modules/common-boilerplate), use `npm init common-boilerplate`",
+  "repository": "git@github.com:node-modules/create-common-boilerplate.git",
+  "homepage": "https://github.com/node-modules/create-common-boilerplate",
   "author": "TZ <atian25@qq.com> (https://github.com/atian25)",
   "dependencies": {
-    "common-boilerplate": "^0.11.0"
+    "common-boilerplate": "^0.14.0"
   },
   "devDependencies": {
     "assert-file": "^1",
@@ -16,6 +16,7 @@
     "egg-ci": "^1",
     "eslint": "^7",
     "eslint-config-egg": "^9",
+    "hasbin": "^1.2.3",
     "mm": "^3",
     "mz-modules": "^2"
   },
@@ -28,7 +29,10 @@
   "publishConfig": {
     "access": "public"
   },
-  "keywords": [ "boilerplate", "common-boilerplate" ],
+  "keywords": [
+    "boilerplate",
+    "common-boilerplate"
+  ],
   "scripts": {
     "autod": "autod",
     "lint": "eslint .",
